# grpc-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
grpc_example/: async_greeter_client.py  async_greeter_server.py
