[tool.poetry]
name = "grpc-example"
version = "0.1.0"
description = ""
authors = ["Noah Bloom <nbloom@nrao.edu>"]
readme = "README.md"
packages = [{include = "grpc_example"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
