[tool.poetry]
name = "grpc-example"
version = "0.1.0"
description = ""
authors = ["Noah Bloom <nbloom@nrao.edu>"]
readme = "README.md"
packages = [{include = "grpc_example"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "*"
grpcio-tools = "*"
mypy-protobuf = "*"
types-protobuf = "*"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
mypy = "*"
flake8 = "*"
isort = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
