[tool.poetry]
name = "grpc-example"
version = "0.1.0"
description = ""
authors = ["Noah Bloom <nbloom@nrao.edu>"]
readme = "README.md"
packages = [{include = "grpc_example"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "*"
grpcio-tools = "*"
mypy-protobuf = "*"
types-protobuf = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
flake8 = "*"
isort = "*"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line_length = 88

[tool.mypy]
python_version = 3.11
warn_return_any = true
ignore_missing_imports = true
follow_imports = "normal"
pretty = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
